# iota-tui

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  wallet.rs
src/app/: explorer.rs  mod.rs  tx_builder.rs  types.rs
src/event/: explorer.rs  input.rs  mod.rs  mouse.rs  nav.rs  popup.rs  screen.rs
src/event/popup/: command_form.rs  mod.rs
src/ui/: activity_feed.rs  address_book.rs  coins.rs  common.rs  explorer.rs  keys.rs  mod.rs  objects.rs  packages.rs  popups.rs  staking.rs  transactions.rs  tx_builder.rs
src/ui/popups/: command_form.rs  detail.rs  mod.rs
src/wallet/: handlers.rs  helpers.rs  lookup.rs  mod.rs
