[package]
name = "iota-wallet-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"
unicode-width = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
hex = "0.4"
base64ct = { version = "1.6", features = ["alloc"] }

arboard = "3"

iota-sdk = { git = "https://github.com/iotaledger/iota-rust-sdk", features = ["crypto", "bech32", "graphql", "txn-builder", "types"] }
